force-app/main/default/objects/leaseworks__Financing__c/leaseworks__Financing__c.object-meta.xml
<CustomObject>
    <description>Financing Information</description>
    <label>Financing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financing</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>