force-app/main/default/objects/leaseworks__Financing__c/fields/leaseworks__Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>$Source.leaseworks__Lease__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Financing</relationshipLabel>
    <relationshipName>Financing</relationshipName>
    <type>Lookup</type>
</CustomField>