force-app/main/default/objects/leaseworks__Financing__c/fields/leaseworks__Closing_Fees__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Closing_Fees__c</fullName>
    <label>Closing Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>