force-app/main/default/objects/leaseworks__Financing__c/fields/leaseworks__Depreciation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Depreciation_Schedule__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; leaseworks__Aircraft__r.leaseworks__Depreciation_Schedule__c
, leaseworks__Aircraft__r.leaseworks__Depreciation_Schedule__r.Name 
,&apos;_blank&apos;)</formula>
    <label>Depreciation Schedule</label>
    <type>Text</type>
</CustomField>