force-app/main/default/objects/leaseworks__Financing__c/fields/leaseworks__Financing_Structure__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Financing_Structure__c</fullName>
    <label>Financing Structure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Financing_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Airline Loan</fullName>
            </value>
            <value>
                <fullName>Non Recourse Investor Loan</fullName>
            </value>
            <value>
                <fullName>Pooled Investor Loan</fullName>
            </value>
            <value>
                <fullName>Syndicated Investor Loan</fullName>
            </value>
            <value>
                <fullName>Tranched Investor Loan</fullName>
            </value>
            <value>
                <fullName>Traditional Lease</fullName>
            </value>
            <value>
                <fullName>Japan Operating Lease</fullName>
            </value>
            <value>
                <fullName>JOLCO</fullName>
            </value>
            <value>
                <fullName>German Operating Lease</fullName>
            </value>
            <value>
                <fullName>German Leveraged Lease</fullName>
            </value>
            <value>
                <fullName>Hong Kong Lease</fullName>
            </value>
            <value>
                <fullName>US Leveraged Lease</fullName>
            </value>
            <value>
                <fullName>Japan Leveraged Lease</fullName>
            </value>
            <value>
                <fullName>Finance Lease</fullName>
            </value>
            <value>
                <fullName>EETC</fullName>
            </value>
            <value>
                <fullName>EEETC (European Trust Certificate)</fullName>
            </value>
            <value>
                <fullName>Ijara</fullName>
            </value>
            <value>
                <fullName>Murabaha</fullName>
            </value>
            <value>
                <fullName>Musharaka</fullName>
            </value>
            <value>
                <fullName>Mudaraba</fullName>
            </value>
            <value>
                <fullName>Wakala</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>