force-app/main/default/objects/leaseworks__Financing__c/fields/leaseworks__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>