force-app/main/default/objects/leaseworks__Financing__c/fields/leaseworks__PMT__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PMT__c</fullName>
    <label>_PMT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>