force-app/main/default/objects/leaseworks__Financing__c/fields/leaseworks__Principal_Repayment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Principal_Repayment__c</fullName>
    <formula>leaseworks__PMT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>