force-app/main/default/objects/leaseworks__Financing__c/fields/leaseworks__Purchase_Price_Option_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Purchase_Price_Option_F__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2103 Purchase Price Option?</label>
    <type>Checkbox</type>
</CustomField>