force-app/main/default/objects/leaseworks__Financing__c/fields/leaseworks__Term_of_the_Loan__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Term_of_the_Loan__c</fullName>
    <description>Number of Months</description>
    <label>Term of the Loan</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>