force-app/main/default/objects/leaseworks__Financing__c/fields/pro_Fund__c.field-meta.xml
<CustomField>
    <fullName>pro_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this Financing record to its parent Fund.</description>
    <label>Fund</label>
    <referenceTo>pro_Fund__c</referenceTo>
    <relationshipLabel>Financing</relationshipLabel>
    <relationshipName>Financing</relationshipName>
    <type>Lookup</type>
</CustomField>