force-app/main/default/objects/leaseworks__Financing__c/validationRules/leaseworks__DuplicateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__DuplicateCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
ISNEW(), 
ISCHANGED( Name )
), 
NOT( 
ISBLANK ( 
VLOOKUP( $ObjectType.leaseworks__Financing__c.Fields.Name, $ObjectType.leaseworks__Financing__c.Fields.Name,  Name )
)
)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name already exists.</errorMessage>
</ValidationRule>