force-app/main/default/objects/leaseworks__Financing__c/validationRules/leaseworks__LeaseCheckNotNeeded.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__LeaseCheckNotNeeded</fullName>
    <active>true</active>
    <errorConditionFormula>AND(text(leaseworks__Financing_Type__c) != &apos;Operating Lease&apos;, !ISBLANK( leaseworks__Lease__c ) )</errorConditionFormula>
    <errorDisplayField>leaseworks__Lease__c</errorDisplayField>
    <errorMessage>Lease is needed only for Operating Lease</errorMessage>
</ValidationRule>