force-app/main/default/objects/leaseworks__Financing__c/validationRules/leaseworks__TermRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__TermRule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(leaseworks__Term_of_the_Loan__c &gt;500,leaseworks__Term_of_the_Loan__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>leaseworks__Term_of_the_Loan__c</errorDisplayField>
    <errorMessage>Term of the Loan is invalid.</errorMessage>
</ValidationRule>