force-app/main/default/objects/leaseworks__Financing__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Financing_Type__c</columns>
    <columns>pro_Fund__c</columns>
    <columns>leaseworks__Financing_Structure__c</columns>
    <columns>leaseworks__Aircraft__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>